--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework==3.15.2
 django-cors-headers==4.3.1
 python-dotenv==1.0.1
 psycopg2-binary==2.9.9
+mysqlclient==2.2.0
 gunicorn==22.0.0
 whitenoise==6.7.0
 dj-database-url==2.2.0
